# OSB_OLD

./: 4 polvos - 4 dias-NOMES att.v2.csv.txt  ModeOSB.py  OSB_GUIQT.py  Polvo2_dia14.csv.txt  README.md  pyproject.toml  statesCount.py  timeline_histo_SWS_REM.py
data/: 4 polvos - 4 dias-NOMES att.v2.csv  Polvo2_dia14.csv
data/.ipynb_checkpoints/: p2.11.04.18-1-checkpoint.csv  p2.12.04.18-1-checkpoint.csv  p2.12.04.18-2-checkpoint.csv  p2.14.04.18-1-checkpoint.csv  p4.21.10.18-2-checkpoint.csv
data/all/: p2.12.04.18.csv  p2.13.04.18.csv  p2.14.04.18.csv  p3.26.07.18.csv  p3.27.07.18.csv  p3.28.07.18.csv  p3.29.07.18.csv  p4.20.10.18.csv  p4.21.10.18.csv  p4.22.10.18.csv  p4.23.10.18.csv  p5.16.03.18.csv  p5.18.03.18.csv  p5.20.03.18.csv  p_all_d_all.csv
data/withoutfeeding/: p2.11.04.18-1.csv  p2.12.04.18-1.csv  p2.12.04.18-2.csv  p2.12.04.18-3.csv  p2.13.04.18-1.csv  p2.13.04.18-2.csv  p3.26.07.18-1.csv  p3.26.07.18-2.csv  p3.26.07.18-3.csv  p3.26.07.18-4.csv  p3.27.07.18-1.csv  p3.27.07.18-2.csv  p3.27.07.18-3.csv  p3.28.07.18-1.csv  p3.28.07.18-2.csv  p3.28.07.18-3.csv  p3.29.07.18-1.csv  p3.29.07.18-2.csv  p4.20.10.18-1.csv  p4.20.10.18-2.csv  p4.20.10.18-3.csv  p4.20.10.18-4.csv  p4.21.10.18-1.csv  p4.21.10.18-2.csv  p4.21.10.18-3.csv  p4.22.10.18-1.csv  p4.22.10.18-2.csv  p4.22.10.18-3.csv  p4.23.10.18-1.csv  p4.23.10.18-2.csv  p4.23.10.18-3.csv  p5.16.03.18-1.csv  p5.16.03.18-2.csv  p5.19.03.18-1.csv  p5.20.03.18-1.csv  p5.20.03.18-3.csv
processed_data/: durations_qop_p5.19.03.18-2.csv  sws_before_rem_intervals.csv
raw_data/all/: p2.11.04.18.csv  (+15 more)
(+68 files in other folders)
