[tool.poetry]
name = "osb"
version = "0.1.0"
description = "OctopusSleepBehavior"
authors = ["Jaime Bruno Cirne de Oliveira <jaime@neuro.ufrn.br>"]
license = "GNU GPL"

[tool.poetry.dependencies]
python = "3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
